SONAR-20429 Raise event in case plugin has been updated